Add episode endpoint
